--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "com.[company-name].[package-name]",
-  "version": "1.2.3",
-  "displayName": "Package Example",
+  "name": "com.stolenpad.ScreenShotTool",
+  "version": "1.0.0",
+  "displayName": "ScreenShotTool",
   "description": "This is an example package",
-  "unity": "2019.1",
-  "unityRelease": "0b5",
+  "unity": "2020.3.11",
+  "unityRelease": "0f1",
   "documentationUrl": "https://example.com/",
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
   "dependencies": {
-    "com.[company-name].some-package": "1.0.0",
-    "com.[company-name].other-package": "2.0.0"
+    "com.stolenpad.some-package": "1.0.0",
+    "com.stolenpad.other-package": "2.0.0"
  },
  "keywords": [
     "keyword1",
