--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.stolenpad.ScreenShotTool",
+  "name": "com.stolenpad.ss",
   "version": "1.0.0",
   "displayName": "ScreenShotTool",
   "description": "This is an example package",
@@ -9,7 +9,7 @@
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
   "dependencies": {
-    "com.stolenpad.some-package": "1.0.0",
+    "com.stolenpad.ss": "1.0.0",
     "com.stolenpad.other-package": "2.0.0"
  },
  "keywords": [
