--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "displayName": "ScreenShotTool",
   "description": "This is an example package",
-  "unity": "2020.3.11",
-  "unityRelease": "0f1",
+  "unity": "2019.1",
+  "unityRelease": "0b5",
   "documentationUrl": "https://example.com/",
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
