--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.stolenpad.ss",
+  "name": "com.stolenpad.screenshot",
   "version": "1.0.0",
   "displayName": "ScreenShotTool",
   "description": "This is an example package",
-  "unity": "2019.1",
-  "unityRelease": "0b5",
+  "unity": "2020.3",
+  "unityRelease": "11f1",
   "documentationUrl": "https://example.com/",
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
