--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "com.stolenpad.ss",
+  "name": "com.stolenpad.stolenpadpackages",
   "version": "1.0.1",
-  "displayName": "ScreenShotTool",
-  "description": "This is an example package",
-  "unity": "2019.1",
-  "unityRelease": "0b5",
+  "displayName": "Stolenpad Packages",
+  "description": "Stolenpad Packages",
+  "unity": "2020.3",
+  "unityRelease": "30f1",
   "documentationUrl": "https://example.com/",
   "changelogUrl": "https://example.com/changelog.html",
   "licensesUrl": "https://example.com/licensing.html",
- "keywords": [
+  "keywords": [
     "keyword1",
     "keyword2",
     "keyword3"
